# Barca-Strategos

./: # EXPERT QA RUST ENGINEER PROMPT.md  .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  Dockerfile.minimal  Dockerfile.simple  Dockerfile.ubuntu  IMPLEMENTATION_SUMMARY.md  Makefile  README-DEPLOYMENT.md  README-Docker.md  README-new.md  README.md  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.scalable.yml  docker-compose.yml  go.mod  install-local.sh  log_build.txt  phoenix-api-static  phoenix-deploy.sh
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: brand-assets.md
assets/logo/: README.md
cmd/: main.go
cmd/api/: main.go
deploy/k8s/: README.md  configmap.yaml  ingress.yaml  namespace.yaml  phoenix-api.yaml  phoenix-frontend.yaml  secrets.yaml
docs/: DEPLOYMENT-RESTRICTED-NETWORK.md  architecture-review-2026.md  architecture-specification.md  brand-guidelines.md  business-features-implementation-summary.md  claude.md  deep-review-alignment-report.md  final-identity.md  final-implementation-summary.md  full-implementation-summary.md  functional-implementation-gap-analysis.md  identity.md  industrial-cyber-framework-summary.md  language-migration-evaluation.md  moa.md  phase1-compliance-implementation-summary.md  phase1-gdpr-implementation-summary.md  phase2-policy-vendor-implementation-summary.md  phase3-advanced-security-summary.md  phase4-completion-summary.md  phase4-deployment-guide.md  picoclaw-philosophy.md  production-readiness.md  report.md  roadmap.md  rust-to-go-types-mapping.md  security-assessment.md  unique-identity.md
examples/: start_web_gui.rs
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: CaseManagement.tsx  Dashboard.tsx  GDPRDashboard.tsx  ISO27001Dashboard.tsx  NISTDashboard.tsx  PCIDashboard.tsx  PlaybookEditor.tsx  PolicyDashboard.tsx  SOC2Dashboard.tsx  VendorDashboard.tsx
internal/agentic/broker/: broker.go
internal/agentic/memory/: memory.go
internal/agentic/referee/: referee.go
internal/asset/: service.go
internal/auth/: rbac.go  sso.go
internal/case/: service.go
internal/chat/: slack.go
internal/compliance/evidence/: export.go
internal/compliance/gdpr/: service.go
internal/compliance/iso27001/: service.go
internal/compliance/nist/: service.go
internal/compliance/pci/: pci.go
internal/compliance/pci_dss/: service.go  service_test.go
internal/compliance/policy/: service.go
internal/compliance/soc2/: service.go  service_test.go  soc2.go
internal/config/: config.go  database.go
internal/database/: postgres.go  redis.go
internal/integrations/: jira.go  service-now.go
internal/middleware/: auth.go
internal/monitoring/alerting/: alerting.go
internal/monitoring/incident/: incident.go
internal/monitoring/siem/: siem.go
internal/monitoring/threat/: threat.go
internal/observability/: metrics.go
internal/playbook/: engine.go
internal/reporting/: service.go
internal/risk/: service.go
internal/routes/: routes.go
internal/security/crypto/: crypto.go
internal/security/rasp/: rasp.go
internal/server/: server.go
internal/siem/: connector.go
internal/tenant/: tenant.go
internal/threatintel/: service.go
internal/websocket/: server.go
monitoring/: prometheus.yml
nginx/: nginx.conf
old_rust/: .env.template  Cargo.toml  Dockerfile.telegram  README-fr.md  docker-compose.yml  speocfcation.md
old_rust/src/: main.rs
old_rust/src/ai/: lib.rs
old_rust/src/compliance/: gdpr_types.rs  iso27001.rs  mod.rs  pci_dss.rs  policy_management.rs
old_rust/src/core/: agent.rs
old_rust/src/gui/: compliance_center.rs  dashboard.rs  mod.rs  security_operations.rs
old_rust/static/: index.html
pkg/types/: asset.go  case.go  compliance.go  doc.go  gdpr.go  gui.go  iso27001.go  monitoring.go  nist.go  pci_dss.go  policy.go  risk.go  security.go  soc2.go  user.go  vendor.go
scripts/: deploy.sh  init-db.sql  install-docker.sh  smoke.sh
src/: lib.rs  main.rs
src/collaboration/: lib.rs
src/common/: types.rs
src/compliance/: gdpr.rs  iso27001.rs  mod.rs  nist_csf.rs  pci_dss.rs  policy_management.rs  risk_management.rs  soc2.rs  vendor_risk.rs
src/core/: agent.rs  lib.rs  security.rs
src/gamification/: lib.rs
src/gui/: agent_interaction.rs  cognitive_collaboration.rs  compliance_center.rs  dashboard.rs  mod.rs  real_time_monitoring.rs  risk_management.rs  security_operations.rs  web_server.rs
src/monitoring/: advanced_monitoring.rs  alerting.rs  incident_response.rs  mod.rs  siem_integration.rs  threat_intelligence.rs
src/runtime/: lib.rs  phoenix_runtime.rs
src/security/: cryptography.rs  data_classification.rs  mod.rs  network_security.rs  rasp.rs
test/integration/: compliance_workflows_test.go
web/: app.js  index.html  styles.css
(+30 files in other folders)
